# blockwitnessp

./: .gitignore  .replit  main.py  pyproject.toml  replit.md  setup_and_run.ps1  start.sh  start_windows.ps1
.local/state/replit/agent/: progress_tracker.md
attached_assets/: Pasted--Build-a-full-stack-project-called-BlockWitness-I-want-you-to-generate-a-complete-clean-easy--1763811766144_1763811766144.txt
backend/: app.py  chain_utils.py  check_db.py  crypto_utils.py  db.py  generate_key.py  requirements.txt
backend/keys/: issuer_priv.pem  issuer_pub.pem
frontend/: index.html  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  FileUpload.jsx  Footer.jsx  Input.jsx
frontend/src/pages/: CreateReport.jsx  Explorer.jsx  Home.jsx  Login.jsx  Search.jsx  Timeline.jsx  Verify.jsx
