[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "fpdf2>=2.8.5",
    "oauthlib>=3.3.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
